unlocked recipes panel